fix some alignment issues

--- a/public/stylesheets/panda.css
+++ b/public/stylesheets/panda.css
@@ -59,6 +59,8 @@ table.builds td {
 }
 
 .revision {
+    background-color: #eeeeee;
+    vertical-align: top;
     font-size: 1.2em;
     font-weight: bold;
 }
